--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,6 @@
-click==8.0.3
-colorama==0.4.4
-Flask==2.0.2
-flatbuffers==2.0
-gunicorn==20.1.0
-itsdangerous==2.0.1
-Jinja2==3.0.3
-MarkupSafe==2.0.1
-numpy==1.21.3
-Pillow==8.4.0
-Werkzeug==2.0.2
+flask
 tensorflow-cpu
+gunicorn
+pillow
+numpy
 opencv-python-headless
